# build-base

./: .env.example  .gitignore  MAC_README.md  NEXT_CHAT_HANDOFF.md  README.md  pyproject.toml  setup_mac.sh  yuho  yuho.command  操作方法.md
config/: ai.yml  automation.yml  company_factbook_sources.yml  company_field_exclusions.csv  company_master.csv  company_year_master.csv  core_fields.yml  document_filter.yml  extraction_sections.yml  field_definition.csv  model_config.yml  security_master.csv  source_registry.yml  validation_rules.yml
data/: .gitkeep
docs/: 2026-07-05_buildbase_r1_r5_report_and_next_plan.md  A-G_cross_audit_2026-07-08.md  A-G_cross_audit_2026-07-08_round2.md  A-G_cross_audit_2026-07-08_round3.md  A-G_cross_audit_2026-07-08_round4.md  A-G_cross_audit_2026-07-08_round5.md  A-G_cross_audit_2026-07-08_round6.md  A-G_cross_audit_2026-07-08_round7.md  A-G_cross_audit_2026-07-08_round8.md  action_contract_loop_2026-07-08_round1.md  automation_and_data_platform.md  factbook_source_onboarding.md  p6_mapping_review_ui_spec.md  persona_ux_audit_2026-07-08_round2.md  sprint9_factbook_2026-07-12.md  state_consistency_loop_2026-07-08_round1.md
tests/: test_ai_bundle.py  test_ai_mapping.py  test_ai_runner.py  test_algorithm_audit_findings.py  test_automation.py  test_cells.py  test_cli_review_sources.py  test_company_factbooks.py  test_corroboration.py  test_corroboration_policy.py  test_cost_textblock.py  test_coverage.py  test_document_resolver.py  test_edinet_db_segment.py  test_end_to_end_poc.py  test_field_admin.py  test_field_definition_enrich.py  test_golden_regression.py  test_local_table_extractor.py  (+20 more)
(+76 files in other folders)
