[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuho-auto-extract"
version = "0.17.2"
description = "BuildBase: local workbench for auditable construction-industry data extraction and analysis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "pdfplumber>=0.11",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
yuho-auto-extract = "yuho_auto_extract.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
